# TeleportHackOnVanilla

./: .gitattributes  .gitignore  AGENTS.md  README.md  category.au3  favlist.fav  global.au3  hack.au3  hotkey.au3  hotkey.txt  include.au3  install.bat  main.au3  main1.12.1.au3  main1.12.3.au3  main3.3.5.au3  main335.au3  mainDH60.au3  onMsg.au3  onWinMsg.au3  run.bat  start.bat  ui.au3  util.au3
.github/workflows/: main.yml
bot/: bwl.au3  stsm.au3
win/: .gitignore  README.md  pyproject.toml
win/docs/: architecture.md  design.md  test-plan.md
win/src/teleport_hack/: __init__.py  __main__.py
win/src/teleport_hack/application/: __init__.py  favourites_porter.py  favourites_service.py  feature_toggles.py  hotkey_service.py  settings.py  teleport_service.py
win/src/teleport_hack/domain/: __init__.py  models.py  versions.py
win/src/teleport_hack/infrastructure/hotkey/: __init__.py  manager.py
win/src/teleport_hack/infrastructure/memory/: __init__.py  backend.py  factory.py  null_backend.py  pymem_backend.py
win/src/teleport_hack/infrastructure/repository/: __init__.py  favlist.py  hotkey_config.py
win/src/teleport_hack/presentation/: __init__.py  app.py  main_window.py  settings_dialog.py  teleport_table_model.py
win/tests/: conftest.py
win/tests/unit/: test_domain_models.py  test_favlist_repository.py  test_favourites_porter.py  test_favourites_service.py  test_feature_toggles.py  test_hotkey_repository.py  test_hotkey_service.py  test_main_window_smoke.py  test_player_name.py  test_settings.py  test_teleport_service.py  test_versions.py
