[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teleport-hack"
version = "1.0.0"
description = "Cross-platform Python/Qt port of the AutoIt WoW Teleport Hack tool."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Refactor Team" }]

dependencies = [
    "PySide6>=6.5",
    "pynput>=1.7",
]

[project.optional-dependencies]
windows = ["pymem>=1.10"]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-qt>=4",
    "ruff>=0.1",
    "mypy>=1",
]

[project.scripts]
teleport-hack = "teleport_hack.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "windows_only: tests that only run on Windows",
    "gui: tests that require a Qt event loop",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
